--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ audio::-webkit-media-controls-enclosure {
 
 /* Эквалайзер */
 .equalizer {
-  display: none;
+  display: flex;
   justify-content: center;
   gap: 16px;
   flex-wrap: wrap;
