--- a/css/style.css
+++ b/css/style.css
@@ -312,6 +312,8 @@ audio::-webkit-media-controls-enclosure {
     /* display: block;
 }
 
+/* end */
+
 /* Скрываем громкость на мобильных устройствах */
 @media (max-width: 767px) {
   .volume-control {
