--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ audio::-webkit-media-controls-enclosure {
     /* margin-bottom: 15px; */
     padding-top: 15px;
     padding-bottom: 15px;
-    background-color: lightblue;
+    background-color: #071b28;
 }
 
 /* .equalizer-container__wrapp-buttons {
